--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,7 +74,7 @@ jobs:
             sudo docker run --rm -d -p 5000:5000 duch0l0/infra:latest
   send_message:
     runs-on: ubuntu-latest
-    eeds: deploy
+    needs: deploy
     steps:
       - name: send message
         uses: appleboy/telegram-action@master
